fixed footer overflow issue

--- a/static/styles/layout.css
+++ b/static/styles/layout.css
@@ -280,6 +280,10 @@ footer {
     height: 50vh;
 }
 
+footer p {
+    padding: 0 3em;
+}
+
 .branding>.footer-logo {
     display: block;
     margin: 0 auto;
@@ -287,9 +291,10 @@ footer {
     aspect-ratio: 1/1;
 }
 
-.branding>.footer-logo img {
+footer img {
     box-shadow: none !important;
-    margin: 0;
+    margin: 0 auto;
+    width: 15% !important;
 }
 
 #copy-right-text {
@@ -334,7 +339,6 @@ a:nth-child(3) {
     img {
         display: block;
         margin: 0 auto;
-        max-width: 50%;
     }
 
     p {
@@ -403,6 +407,7 @@ a:nth-child(3) {
     }
 
     .branding img {
+        max-width: 15%;
         box-shadow: none !important;
         margin: 0 auto;
     }
